fix(Card): ensure spacings look right on card regardless of children margins

--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -5,3 +5,11 @@
   padding: var(--e-space-3);
   margin: var(--e-space-4) 0;
 }
+
+.e-card > *:first-child {
+  margin-top: 0;
+}
+
+.e-card > *:last-child {
+  margin-bottom: 0;
+}
